--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "benbarnett/jQuery-Animate-Enhanced",
   "version": "1.0.7",
-  "main": "./jquery.animate-enhanced.min.js",
+  "main": "scripts/src/jquery.animate-enhanced.js",
   "description": "Extend $.animate() to detect CSS transitions for Webkit, Mozilla, IE>=10 and Opera and convert animations automatically.",
   "license": "MIT (http://opensource.org/licenses/mit-license.php)",
   "ignore": [
